--- a/app/webroot/css/default.css
+++ b/app/webroot/css/default.css
@@ -13,6 +13,46 @@ html, body{
 	padding: 0 15px;
 }
 
+.clearfix:after {
+    content: ".";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    line-height: 0;
+    height: 0;
+}
+ 
+.clearfix {
+    display: block;
+}
+ 
+html[xmlns] .clearfix {
+    display: block;
+}
+ 
+* html .clearfix {
+    height: 1%;
+}
+
+
+/*Formulario*/
+input[type=text],
+input[type=password],
+input[type=email],
+input[type=tel],
+input[type=number],
+textarea,
+select{
+    border: 3px solid #ddd;
+    border-radius: 3px;
+    padding: 10px;
+    font-size: 16px;
+    color: #aaa;
+    outline: none;
+    background: #fff;
+    height: 44px;
+    box-sizing: border-box;
+}
 
 
 
