--- a/app/webroot/css/home.css
+++ b/app/webroot/css/home.css
@@ -12,8 +12,11 @@
 	z-index: 1;
 }
 .home_video_container .video_wrapper video{
-	width: 100%;
+	min-width: 100%;
+	min-height: 100%;
+	width: auto;
 	height: auto;
+	background-size: cover;
 }
 .institucional_header{
 	/*background: rgba(255,255,255,0.8);*/
@@ -57,6 +60,20 @@
 .institucional_header nav a.signup_link:hover{
 	background: #fff;
 }
+
+.current_user_header{
+	display: inline-block;
+	margin-left: 20px;
+	color: #fff;
+}
+.current_user_header img{
+	width: 30px;
+	vertical-align: middle;
+	height: 30px;
+	border-radius: 100%;
+	margin-right: 10px;
+}
+
 .home_video_container .login_box{
 	position: absolute;
 	z-index: 2;
@@ -86,10 +103,10 @@
 .home_video_container .login_box form{
 	margin-top: 20px;
 }
-.home_video_container .login_box form label{
+.home_video_container .login_box form div label{
 	display: block;
 	margin: 5px 0;
-
+	color: #fff;
 }
 .home_video_container .login_box form input{
 	width: 100%;
@@ -99,7 +116,12 @@
 	font-size: 14px;
 	font-family: 'Open Sans', Helvetica, Helvetica Neue, Arial, sans-serif;
 }
-.home_video_container .login_box form p input{
+.home_video_container .login_box form div{
+	width: 100%;
+	float: none;
+	margin: 10px 0;
+}
+.home_video_container .login_box form div input{
 	padding: 10px;
 	background-size: #fff;
 	border: 1px solid #ccc;
