--- a/app/webroot/css/default.css
+++ b/app/webroot/css/default.css
@@ -77,6 +77,35 @@ div.error-message{
     box-shadow: 0 10px 20px rgba(0,0,0,0.2);
 }
 
+.content_text{
+    color: #555;
+    margin: 40px 0;
+}
+
+.equipe{
+    display: block;
+    width: 100%;
+    padding: 0;
+    margin: 40px 0;
+    list-style: none;
+}
+.equipe li{
+    display: block;
+    float: left;
+    vertical-align: top;
+    width: 25%;
+    text-align: center;
+}
+.equipe li img{
+    width: 170px;
+    height: 170px;
+    border-radius: 100%;
+    border: 1px solid #ccc;
+}
+.equipe li h2{
+    font-size: 18px;
+}
+
 
 
 
