--- a/app/webroot/css/default.css
+++ b/app/webroot/css/default.css
@@ -106,6 +106,76 @@ div.error-message{
     font-size: 18px;
 }
 
+.institucional_header{
+    /*background: rgba(255,255,255,0.8);*/
+    background: -moz-linear-gradient(top,  rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+    width: 100%;
+    height: 100px;
+    padding: 10px 0;
+    position: absolute;
+    top: 0;
+    z-index: 3;
+    overflow: hidden;
+}
+.institucional_header nav{
+    float: right;
+}
+.institucional_header nav a{
+    display: inline-block;
+    text-decoration: none;
+    color: #ffffff;
+    margin: 0 0 0 15px;
+    transition: color 0.3s ease;
+}
+.institucional_header nav a.signup_link{
+    font-weight: 700;
+    font-size: 16px;
+    color: #fff;
+    background: #ff5d00;
+    padding: 7px 10px;
+    border-radius: 3px;
+    transition: background 0.3s ease;
+}
+.institucional_header nav a:hover{
+    color: #ff5d00;
+}
+.institucional_header nav a.signup_link:hover{
+    background: #fff;
+}
+
+.current_user_header{
+    display: inline-block;
+    margin-left: 20px;
+    color: #fff;
+}
+.current_user_header img{
+    width: 30px;
+    vertical-align: middle;
+    height: 30px;
+    border-radius: 100%;
+    margin-right: 10px;
+}
+
+footer.footer_home{
+    background: #eee;
+    padding: 50px 0;
+    width: 100%;
+    font-size: 13px;
+}
+footer.footer_home nav a{
+    display: inline-block;
+    margin-right: 15px;
+    text-decoration: none;
+    color: #222;
+}
+
+
 
 
 
